# tabry-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  bar.bash  build.rs  default.nix  flake.nix  rabry_bash.sh  tabry_bash.sh  tmp.json
.github/workflows/: rust.yml
compiler/: Cargo.toml
compiler/src/: main.rs
docker/fish/: Dockerfile  README.md  foo.tabry
examples/tabry/: .gitignore  jc.tabry  tabry.tabry
fixtures/: missing_include.json  vehicles.json
fixtures/TODO_examples_from_language_reference/: arguments_and_possible_options__arg_.tabry  multi_line_descriptions.tabry
fixtures/examples_from_language_reference/: argument_titles.json  argument_titles.tabry  arguments_and_possible_options__arg_.json  flags__flag__flagarg__reqd_flagarg_.json  flags__flag__flagarg__reqd_flagarg_.tabry  getting_started.json  getting_started.tabry  includes.json  includes.tabry  multi_line_descriptions.json  optional_args_and_varargs__opt_arg__varargs__opt_varargs_.json  optional_args_and_varargs__opt_arg__varargs__opt_varargs_.tabry  options.json  options.tabry  subcommands__sub__1.json  subcommands__sub__1.tabry  subcommands__sub__2.json  subcommands__sub__2.tabry
nix/: README.md  Readme.md  tabry-helpers.nix  tabry-hm-module.nix  tabry-lang.nix
shell/: tabry_bash.sh  tabry_fish.fish  tabry_zsh.sh
src/: cached_jsons.rs  config.rs  config_finder.rs  config_wrapper.rs  example_config_json.rs  lang.rs  lib.rs  machine.rs  machine_state.rs  main.rs  options_finder.rs  result.rs  shell_tokenizer.rs  test_helpers.rs  token_matching.rs  types.rs  util.rs
src/app/: cached_jsons.rs  config_finder.rs  mod.rs  shell_tokenizer.rs
src/core/: config.rs  mod.rs  types.rs  util.rs
src/engine/: machine.rs  machine_state.rs  mod.rs  options_finder.rs  result.rs  token_matching.rs
src/lang/: ast.rs  compiler.rs  grammar.rs  lexer.rs  mod.rs  parser.rs  translator.rs
