[package]
name = "rabry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shell-words = "1.1.0"
thiserror = "1.0.44"
rust-sitter = "0.3.4"

[dev-dependencies]
assert-json-diff = "2.0.2"

[build-dependencies]
rust-sitter-tool = "0.3.4"
