[package]
name = "tabry"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shell-words = "1.1.0"
thiserror = "1.0.44"
winnow = "0.6.18"

[dev-dependencies]
assert-json-diff = "2.0.2"
