[package]
name = "tabry"
version = "0.1.0" # Sync this with the version in ./default.nix
edition = "2021"
description = "Utility (and mini-language) for shell completions (\"tab completion\") for external programs"
license = "MIT"

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
color-eyre = "0.6.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shell-words = "1.1.0"
thiserror = "1.0.44"
winnow = "0.6.18"

[dev-dependencies]
assert-json-diff = "2.0.2"

[package.metadata.deb]
maintainer = "Evan Battaglia <ebattaglia@instructure.com>"
copyright = "2024, Evan Battaglia <ebattaglia@instructure.com>"
license-file = ["LICENSE", "2"]
extended-description = """\
Tabry allows you to easily write tab completion for external \
commands which do not support tab completion, including your \
own scripts and aliases. tabry especially targets CLIs with \
"git-style" subcommands or nested subcommands. \
See https://github.com/evanbattaglia/tabry and \
/usr/share/doc/tabry/README.md for more information."""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/tabry", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/tabry/README.md", "644"],
    ["examples/*/*", "usr/share/doc/tabry/examples", "644"]
]
